<resources>
    <string name="app_name">Ngalo</string>
    <string name="hirebikes">Hire Bikes</string>
    <string name="buybikes">Buy Bikes</string>
    <string name="repairbikes">Bike Repair</string>
    <string name="bikeparts">Bike Parts</string>
    <string name="bikeride">Bike Rides</string>
    <string name="splash_screen">SplashScreen</string>
    <string name="main_screen">MainScreen</string>
    <string name="ngalo_title_text">Ngalo Services</string>
    <string name="title_activity_bike_hire">BikeHire</string>
    <string name="title_activity_hire_bike">HireBike</string>
    <string name="hirebike">Hire Bike</string>
    <string name="unknown">unknown</string>
    <string name="title_activity_bike_hire_screen">BikeHire</string>
    <string name="bike_image">bike image</string>
    <string name="bike_name">Bike Name</string>
    <string name="bike_price">Bike Price</string>
    <string name="sign_out">Sign Out</string>
    <string name="phone_number">Phone number</string>
    <string name="log_in">LogIn</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="status_signed_in">Signed in</string>
    <string name="status_signed_out">Signed out</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="title_activity_bikes_options">BikesOptions</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutUs">Ngalo is a bicycle service delivery company \n we deal in \n
    1. bicycle repaire
    2. Selling of bicycles
    3. Hiring of bicycles
    5. Bicycle tours/rides</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title_activity_upload_items">Upload Items</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="channel_name">ngalo_channel</string>
    <string name="channel_description">ngalo_advert</string>
    <string name="title_activity_bike_repair">BikeRepair</string>
    <string name="enter_repair_location">Enter your location</string>
    <string name="enter_repair_description">Enter repair description</string>
    <string name="submit_request">Submit Request</string>
    <string name="Api_key">AIzaSyAJBlxp2SUfwdh5GMfGP19Q_aetYtKybgs</string>
    <string name="request_repair">Request Repair</string>
    <string name="select_your_location">Select your location</string>
    <string name="brief_description_of_the_problem">Brief description of the problem</string>
    <string name="request_for_bike_repair">Request for Bike Repair</string>
    <string name="title_activity_admin_home_page">AdminHomePage</string>
    <string name="title_activity_admin_ouser">AdminOUser</string>
    <string name="waiting_for_location">Waiting for Location...</string>
    <string name="set_current_location">Set Current Location</string>
    <string name="your_location">Your Location</string>
    <string name="title_activity_orders">Orders</string>
    <string name="driver_here">Customer is Here</string>
    <string name="driver_found">Searching...</string>
    <string name="ngalo_location">0.3765387,32.6068885</string>
    <string name="style_json">[
        {
        elementType: \"geometry\",
        stylers: [{color: \"#242f3e\"}]
        },         {
        elementType: \"labels.text.stroke\",
        stylers: [{color: \"#242f3e\"}]
        },
        {
        elementType: \"labels.text.fill\",
        stylers: [{color: \"#746855\"}]
        },
        {
        \"featureType\": \"all\",
        \"elementType\": \"labels\",
        \"stylers\": [
        {
        \"visibility\": \"on\"
        }         ]
        },
        {
        \"featureType\": \"administrative\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"visibility\": \"on\"
        },
        {
        \"color\": \"#efebe2\"
        }         ]     },
        {
        \"featureType\": \"landscape\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#efebe2\"
        }         ]     },
        {
        \"featureType\": \"poi\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#efebe2\"
        }         ]     },
        {
        \"featureType\": \"poi.attraction\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#efebe2\"
        }         ]
        },
        {
        \"featureType\": \"poi.business\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#efebe2\"
        }         ]     },
        {
        \"featureType\": \"poi.government\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#dfdcd5\"
        }
        ]
        },
        {
        \"featureType\": \"poi.medical\",
        \"elementType\": \"all\",
        \"stylers\": [             {
        \"color\": \"#dfdcd5\"
        }         ]     },
        {
        \"featureType\": \"poi.park\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#bad294\"
        }         ]     },
        {
        \"featureType\": \"poi.place_of_worship\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#efebe2\"
        }
        ]
        },
        {
        \"featureType\": \"poi.school\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#efebe2\"
        }         ]     },
        {
        \"featureType\": \"poi.sports_complex\",
        \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#efebe2\"
        }         ]     },
        {
        \"featureType\": \"road.highway\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [
        {
        /\"color\": \"#ffffff\"
        }         ]     },
        {
        \"featureType\": \"road.highway\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [
        {
        \"visibility\": \"on\"
        }
        ]
        },
        {
        \"featureType\": \"road.arterial\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [             {
        \"color\": \"#ffffff\"             }         ]     },     {
        \"featureType\": \"road.arterial\",
        \"elementType\": \"geometry.stroke\",
        \"stylers\": [             {
        \"visibility\": \"on\"             }
        ]     },     {         \"featureType\": \"road.local\",
        \"elementType\": \"geometry.fill\",
        \"stylers\": [             {
        \"color\": \"#fbfbfb\"
        }
        ]     },     {         \"featureType\": \"road.local\",
        \"elementType\": \"geometry.stroke\",         \"stylers\": [             {
        \"visibility\": \"on\"             }         ]     },     {         \"featureType\": \"transit\",
        \"elementType\": \"all\",         \"stylers\": [             {                 \"visibility\": \"on\"
        }         ]     },
        {         \"featureType\": \"water\",         \"elementType\": \"all\",
        \"stylers\": [
        {
        \"color\": \"#a5d7e0\"
        }
        ]
        }
        ]
    </string>
    <string name="title_activity_admin_panel">Admin Panel</string>
    <string name="version">1</string>
    <string name="no_orders_available">No Orders Available</string>
    <string name="no_orders_made_yet">No Orders made yet</string>
    <string name="title_activity_cart">Cart</string>
    <string name="item_name">Item Name</string>
    <string name="check_out">Check Out</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="title_activity_progress">Progress</string>
    <string name="hint_input">hint_input\n</string>
    <string name="channel_new_messages">channel message\n</string>
    <string name="channel_new_messages_description">channel message description</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_user_purchase_group">UserPurchaseGroup</string>
    <string name="title_activity_phone_number_auth">PhoneNumberAuth</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="sign_in_start">Start</string>
    <string name="sign_in_silent">Sign in silently</string>
    <string name="providers_header">Auth providers</string>
    <string name="providers_google">Google</string>
    <string name="providers_facebook">Facebook</string>
    <string name="providers_twitter">Twitter</string>
    <string name="providers_email">Email</string>
    <string name="providers_email_link">Email link</string>
    <string name="providers_phone">Phone</string>
    <string name="providers_anonymous">Anonymous</string>
    <string name="providers_apple">Apple</string>
    <string name="providers_microsoft">Microsoft</string>
    <string name="providers_yahoo">Yahoo</string>
    <string name="providers_github">GitHub</string>
    <string name="layout_header">Layout</string>
    <string name="layout_default">Default</string>
    <string name="layout_custom">Custom</string>
    <string name="theme_header">Theme</string>
    <string name="theme_default">Material Light Theme</string>
    <string name="theme_app">App Theme</string>
    <string name="theme_green">Green Theme</string>
    <string name="logo_header">Logo</string>
    <string name="logo_firebase">Firebase Auth</string>
    <string name="logo_google">Google</string>
    <string name="logo_none">None</string>
    <string name="tos_pp_header">Terms of Service and Privacy Policy</string>
    <string name="tos_pp_google">Google</string>
    <string name="tos_pp_firebase">Firebase</string>
    <string name="tos_pp_none">None</string>
    <string name="google_scopes_header">Example extra Google scopes</string>
    <string name="google_scope_drive_file">Drive File</string>
    <string name="google_scope_youtube_data">Youtube data</string>
    <string name="facebook_permissions_header">Example extra Facebook permissions</string>
    <string name="facebook_permission_friends">Friends</string>
    <string name="facebook_permission_photos">Photos</string>
    <string name="options_header">Other Options</string>
    <string name="options_enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="options_enable_hint_selector">Enable Smart Lock\'s hint selector</string>
    <string name="options_allow_new_email_acccount">Allow new account creation</string>
    <string name="options_require_name">Require first/last name with email accounts.</string>
    <string name="options_use_auth_emulator">Connect to auth emulator (localhost:9099).</string>
    <string name="configuration_required">Configuration required - see README.md</string>
    <string name="google_label_missing_config">Google configuration missing</string>
    <string name="facebook_label_missing_config">Facebook configuration missing</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="account_disabled">Account is disabled by the administrator</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="title_anonymous_upgrade">FirebaseUI Anonymous Account Linking</string>
    <string name="anonymous_sign_in">Anonymous Sign In</string>
    <string name="launch_auth_ui">Launch Auth UI</string>
    <string name="resolve_merge_conflict">Resolve Merge Conflict</string>
</resources>