<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BikeRepair">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivities.MapsActivity" />


    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ngalo_blue"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/request_for_bike_repair"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/bikerepairImageView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/placeholder_with" />

        <EditText
            android:id="@+id/repairDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_decription"
            android:drawablePadding="10dp"
            android:hint="@string/brief_description_of_the_problem"
            android:padding="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/your_location"
            android:textColor="@color/ngalo_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_location_on_primary_24dp" />

            <TextView
                android:id="@+id/userLocationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/select_your_location"
                android:textColor="@color/ngalo_blue"
                android:textSize="18sp" />


        </LinearLayout>


        <Button
            android:id="@+id/requestRepairButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/ngalo_blue"
            android:padding="10dp"
            android:text="@string/request_repair"
            android:textColor="@color/white" />
    </LinearLayout>


    <Button
        android:id="@+id/orderdocBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/border_color"
        android:text="Request for Repaire"
        android:textColor="@color/ngalo_blue"
        android:textSize="18sp"
        android:textStyle="bold" />


</FrameLayout>