<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bikeImage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/bike_image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_ph"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/textViewsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/item_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:paddingStart="10dp"
                            android:text="Category"
                            android:textColor="@color/ngalo_blue"
                            android:textSize="26sp" />

                        <TextView
                            android:id="@+id/textBikeName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/bike_name"
                            android:textColor="@color/ngalo_blue"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/bike_price"
                            android:textColor="@color/ngalo_blue"
                            android:textSize="18sp" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/detailsDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/ngalo_gray"
                        android:padding="10dp"
                        android:text="@string/description"
                        android:textColor="@color/ngalo_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/josefinslab_regular"
                        android:text="@string/details"
                        android:textColor="@color/ngalo_blue"
                        android:textSize="18sp" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </RelativeLayout>

</layout>